[gd_scene load_steps=30 format=2]

[ext_resource path="res://scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/big_zombie_run_anim_f3.png" type="Texture" id=2]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/skelet_run_anim_f0.png" type="Texture" id=3]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/skelet_run_anim_f1.png" type="Texture" id=4]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/skelet_run_anim_f2.png" type="Texture" id=5]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/skelet_run_anim_f3.png" type="Texture" id=6]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/big_zombie_run_anim_f2.png" type="Texture" id=7]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/big_zombie_run_anim_f0.png" type="Texture" id=8]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/big_zombie_run_anim_f1.png" type="Texture" id=9]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/zombie_run_anim_f0.png" type="Texture" id=10]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/zombie_run_anim_f3.png" type="Texture" id=11]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/zombie_run_anim_f1.png" type="Texture" id=12]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/zombie_run_anim_f2.png" type="Texture" id=13]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/chort_run_anim_f1.png" type="Texture" id=14]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/chort_run_anim_f2.png" type="Texture" id=15]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/chort_run_anim_f3.png" type="Texture" id=16]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/chort_run_anim_f0.png" type="Texture" id=17]
[ext_resource path="res://art/audio/sfx/Hit (Taking Damage)/hit2.wav" type="AudioStream" id=18]
[ext_resource path="res://art/audio/sfx/Hit (Taking Damage)/hit1.wav" type="AudioStream" id=19]
[ext_resource path="res://art/audio/sfx/Hit (Taking Damage)/hit3.wav" type="AudioStream" id=20]
[ext_resource path="res://art/audio/sfx/Hit (Taking Damage)/hit4.wav" type="AudioStream" id=21]
[ext_resource path="res://EnemyAudio.gd" type="Script" id=22]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/swampy_run_anim_f3.png" type="Texture" id=23]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/swampy_run_anim_f0.png" type="Texture" id=24]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/swampy_run_anim_f1.png" type="Texture" id=25]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/swampy_run_anim_f2.png" type="Texture" id=26]
[ext_resource path="res://scenes/PlayerRB.gd" type="Script" id=27]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0
height = 0.0709038

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 17 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "chort_run",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 11 ) ],
"loop": true,
"name": "zombie_run",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 2 ) ],
"loop": true,
"name": "bigzombie_run",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 23 ) ],
"loop": true,
"name": "swampy_run",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "skeleton_run",
"speed": 5.0
} ]

[node name="Enemy" type="Node2D" groups=[
"Enemies",
]]
script = ExtResource( 1 )
my_type = 1
my_attack = 1

[node name="EnemyBody" type="RigidBody2D" parent="."]
mode = 3
contacts_reported = 10
contact_monitor = true
script = ExtResource( 27 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyBody"]
position = Vector2( -0.115974, 5.71144 )
shape = SubResource( 1 )

[node name="EnemyAudio" type="Node2D" parent="EnemyBody"]
script = ExtResource( 22 )
__meta__ = {
"_edit_lock_": true
}
hitsounds = [ ExtResource( 19 ), ExtResource( 18 ), ExtResource( 20 ), ExtResource( 21 ) ]

[node name="Sprite" type="AnimatedSprite" parent="EnemyBody"]
z_index = 5
z_as_relative = false
frames = SubResource( 2 )
animation = "chort_run"
frame = 3
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="Line2D" type="Line2D" parent="."]
z_index = 4096
z_as_relative = false
__meta__ = {
"_edit_lock_": true
}
[connection signal="body_shape_entered" from="EnemyBody" to="." method="_on_RigidBody2D_body_shape_entered"]
